[gd_scene load_steps=22 format=3 uid="uid://cjklfdgm5gow1"]

[ext_resource type="Material" uid="uid://cw8oxk75ogtt0" path="res://assets/textures/materials/wall_material.tres" id="1_dl4dv"]
[ext_resource type="Script" uid="uid://bkshs7p6ds8bu" path="res://scenes/maps/kube_map.gd" id="1_yere7"]
[ext_resource type="PackedScene" uid="uid://c5cpifl7vhf2k" path="res://scenes/maps/parts/decor/decorations.tscn" id="2_j2746"]
[ext_resource type="Material" uid="uid://c1ug8bb6pokoh" path="res://resources/materials/spawner_texture.tres" id="3_jahep"]
[ext_resource type="PrismMesh" uid="uid://c5x02ui4xuaqn" path="res://assets/3d/my/crystal_mesh.tres" id="4_0mibu"]
[ext_resource type="PackedScene" uid="uid://b00ueq03g1rm1" path="res://scenes/maps/parts/entrance_to_stage.tscn" id="5_yoru6"]
[ext_resource type="PackedScene" uid="uid://dcui50rm1jgnl" path="res://scenes/maps/parts/8m/tunel_8_8_4.tscn" id="6_mdabv"]

[sub_resource type="BoxMesh" id="BoxMesh_p620k"]
material = ExtResource("1_dl4dv")
size = Vector3(100, 100, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_dl4dv"]
size = Vector3(100, 100, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_yoru6"]
size = Vector3(1, 4, 8)

[sub_resource type="BoxMesh" id="BoxMesh_yere7"]
material = ExtResource("3_jahep")
size = Vector3(20, 20, 20)

[sub_resource type="MultiMesh" id="MultiMesh_mdabv"]
transform_format = 1
mesh = SubResource("BoxMesh_yere7")

[sub_resource type="SphereMesh" id="SphereMesh_yoru6"]
material = ExtResource("3_jahep")
radius = 16.0
height = 30.0
radial_segments = 8
rings = 6

[sub_resource type="MultiMesh" id="MultiMesh_yere7"]
transform_format = 1
mesh = SubResource("SphereMesh_yoru6")

[sub_resource type="MultiMesh" id="MultiMesh_k34vf"]
transform_format = 1
mesh = ExtResource("4_0mibu")

[sub_resource type="Animation" id="Animation_yere7"]
resource_name = "final"
length = 9.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 6, 9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.174533, 0.174533), Vector3(0.20944, 0.523599, 0.20944), Vector3(0.20944, 1.91986, 0.20944)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6, 9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.2, 1.2, 1.2), Vector3(0.01, 0.01, 0.01)]
}

[sub_resource type="Animation" id="Animation_mdabv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mdabv"]
_data = {
&"RESET": SubResource("Animation_mdabv"),
&"final": SubResource("Animation_yere7")
}

[sub_resource type="Animation" id="Animation_yoru6"]
resource_name = "rotate"
length = 30.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Kubes:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spheres:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -3.14159, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Crystals:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="Animation" id="Animation_k34vf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Kubes:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spheres:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Crystals:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_umv0c"]
_data = {
&"RESET": SubResource("Animation_k34vf"),
&"rotate": SubResource("Animation_yoru6")
}

[node name="KubeMap" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 47)
script = ExtResource("1_yere7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0)
mesh = SubResource("BoxMesh_p620k")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("BoxShape3D_dl4dv")

[node name="Decorations" parent="MeshInstance3D" instance=ExtResource("2_j2746")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -50, 0, 0)

[node name="Decorations2" parent="MeshInstance3D" instance=ExtResource("2_j2746")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0)

[node name="Decorations3" parent="MeshInstance3D" instance=ExtResource("2_j2746")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 50, 0, 0)

[node name="Decorations4" parent="MeshInstance3D" instance=ExtResource("2_j2746")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -50)

[node name="Decorations5" parent="MeshInstance3D" instance=ExtResource("2_j2746")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 50)

[node name="Tunel8_8_5" parent="MeshInstance3D" instance=ExtResource("6_mdabv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6183, 50, 0)

[node name="Tunel8_8_6" parent="MeshInstance3D" instance=ExtResource("6_mdabv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.119, 50, 0)

[node name="Tunel8_8_7" parent="MeshInstance3D" instance=ExtResource("6_mdabv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.119, 50, 0)

[node name="Tunel8_8_8" parent="MeshInstance3D" instance=ExtResource("6_mdabv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 47.119, 50, 0)

[node name="Tunel8_8_4" parent="MeshInstance3D" instance=ExtResource("6_mdabv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.6183, 50, 0)

[node name="Tunel8_8_10" parent="MeshInstance3D" instance=ExtResource("6_mdabv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.61835, 50, 0)

[node name="Area3D" type="Area3D" parent="MeshInstance3D/Tunel8_8_10"]
collision_layer = 0
collision_mask = 513

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Tunel8_8_10/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.57837, 1.71414, 0)
shape = SubResource("BoxShape3D_yoru6")

[node name="EntranceToStage" parent="MeshInstance3D" instance=ExtResource("5_yoru6")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 46.7858, 49.9783, 0)

[node name="Kubes" type="MultiMeshInstance3D" parent="."]
multimesh = SubResource("MultiMesh_mdabv")

[node name="Spheres" type="MultiMeshInstance3D" parent="."]
multimesh = SubResource("MultiMesh_yere7")

[node name="Crystals" type="MultiMeshInstance3D" parent="."]
multimesh = SubResource("MultiMesh_k34vf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mdabv")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_umv0c")
}
autoplay = "rotate"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="MeshInstance3D/Tunel8_8_10/Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
